backend/demo/src/main/java/com/example/demo/error/InvalidYearException.java
package com.example.demo.error;


public class InvalidYearException extends RuntimeException 
{

	public InvalidYearException(String message) {
		super(message);
	}
	
}
